--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,44 @@
 version: '3.1'
 services:
   stats-server:
+    build: ./statSvc
+    image: dock_image_service
+    container_name: dock_container_service
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
 
   stats-db:
     image: postgres:14-alpine
+    container_name: dock_container_postgres_stats
+    ports:
+      - "6432:5432"
+    volumes:
+      - /var/lib/postgresql/data/
+    environment:
+      - POSTGRES_DB=afisha
+      - POSTGRES_USER=sa
+      - POSTGRES_PASSWORD=password
 
   ewm-service:
     ports:
       - "8080:8080"
+    build: ./statMain
+    image: dock_image_main
+    container_name: dock_container_main
+    depends_on:
+      - ewm-db
 
   ewm-db:
     image: postgres:14-alpine
+    container_name: dock_container_postgres_ewm
+    ports:
+      - "5432:5432"
+    volumes:
+      - /var/lib/postgresql/data/
+    environment:
+      - POSTGRES_DB=afisha
+      - POSTGRES_USER=sa
+      - POSTGRES_PASSWORD=password
+
