refactor: main service v0.2, docker added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,23 @@ services:
       - "9090:9090"
     depends_on:
       - stats-db
+    environment:
+      - SPRING_DRIVER_CLASS_NAME=org.postgresql.Driver
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/afisha
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
 
   stats-db:
     image: postgres:14-alpine
     container_name: dock_container_postgres_stats
     ports:
-      - "6432:5432"
+      - "6542:5432"
     volumes:
       - /var/lib/postgresql/data/
     environment:
       - POSTGRES_DB=afisha
-      - POSTGRES_USER=sa
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
 
   ewm-service:
     ports:
@@ -28,16 +33,20 @@ services:
     container_name: dock_container_ewm
     depends_on:
       - ewm-db
+    environment:
+      - SPRING_DRIVER_CLASS_NAME=org.postgresql.Driver
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/afisha
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
 
   ewm-db:
     image: postgres:14-alpine
     container_name: dock_container_postgres_ewm
     ports:
-      - "5432:5432"
+      - "6541:5432"
     volumes:
       - /var/lib/postgresql/data/
     environment:
       - POSTGRES_DB=afisha
-      - POSTGRES_USER=sa
-      - POSTGRES_PASSWORD=password
-
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
